...
		android:fitsSystemWindows="true">
		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize">
			<androidx.appcompat.widget.SearchView
				android:id="@+id/search_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginEnd="@dimen/space_2"
				android:iconifiedByDefault="true"/>
		</com.google.android.material.appbar.MaterialToolbar>
...
			android:padding="8dp"
			android:gravity="center"
			android:visibility="gone"
			android:text="@string/no_keys" />
	</androidx.core.widget.NestedScrollView>
	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/token_list"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		android:paddingBottom="@dimen/token_list_bottom_padding"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
...
