...
            app:layout_constraintTop_toBottomOf="@+id/code"
            app:layout_constraintBottom_toBottomOf="parent">
            <include layout="@layout/titles" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menu"
            android:layout_width="32dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/space_2"
            android:src="@drawable/menu"
            app:tint="@color/overflow_menu"
            android:tintMode="add"
...
